Anaha Prabhakaran removed

--- a/about.html
+++ b/about.html
@@ -366,12 +366,11 @@
         <h2>Our Leadership Structure</h2>
         <div class="mermaid">
             graph TD
-            P1[Anaha Prabhakaran <br/> President]
-            P2[Hari Gridharan <br/> Treasurer]
-            P3[Agastya Gupta <br/> Vice President]
-            P4[Eden Odendahl <br/> Secretary]
-            P1 & P2 & P3 & P4 --> B1[Cherry Creek High School Branch]
-            P1 & P2 & P3 & P4 --> B2[Grandview Branch]
+            P1[Hari Gridharan <br/> Treasurer]
+            P2[Agastya Gupta <br/> Vice President]
+            P3[Eden Odendahl <br/> Secretary]
+            P1 & P2 & P3 --> B1[Cherry Creek High School Branch]
+            P1 & P2 & P3 --> B2[Grandview Branch]
             B1 --> O1[Media and Tech Officer]
             B1 --> O2[Member Engagment Officer]
             B1 --> O3[Outreach Officer]
